--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ensicoin_messages"
-version = "0.3.7"
+version = "0.4.0"
 authors = ["Quentin Boyer <qbsecond@gmail.com>"]
 edition = "2018"
 
@@ -11,7 +11,7 @@ repository = "https://github.com/EnsicoinDevs/ensicoin-message"
 [dependencies]
 ensicoin_serializer = "^2.0.0"
 ensicoin_serializer_derive = "^0.2"
-bytes = "^0.4"
+bytes = "0.4.12"
 serde = { version = "1.0", features = ["derive"] }
 generic-array = {version = "^0.12.0", features = ["serde"] }
 sha2 = "^0.8.0"
