--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ensicoin_messages"
-version = "0.6.2"
+version = "0.6.3"
 authors = ["Quentin Boyer <qbsecond@gmail.com>"]
 edition = "2018"
 
@@ -11,6 +11,15 @@ repository = "https://github.com/EnsicoinDevs/ensicoin-message"
 [dependencies]
 ensicoin_serializer = "^2.0.0"
 ensicoin_serializer_derive = "^0.2"
-bytes = "^0.4"
+bytes = "0.4.12"
 generic-array = {version = "^0.12.0" }
 sha2 = "^0.8.0"
+prost = { version = "0.5.0", optional = true }
+
+[features]
+grpc = ["prost", "prost-build"]
+
+default = []
+
+[build-dependencies]
+prost-build = {version = "0.5.0", optional = true}
