--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,11 @@ license = "MIT"
 repository = "https://github.com/EnsicoinDevs/ensicoin-message"
 
 [dependencies]
-ensicoin_serializer = "^2.0.0"
-ensicoin_serializer_derive = "^0.2"
+ensicoin_serializer = "2.0.7"
+ensicoin_serializer_derive = "0.2.6"
 bytes = "0.4.12"
-generic-array = {version = "^0.12.0" }
-sha2 = "^0.8.0"
+generic-array = "0.13.2"
+sha2 = "0.8.0"
 prost = { version = "0.5.0", optional = true }
 
 [features]
@@ -22,4 +22,4 @@ grpc = ["prost", "prost-build"]
 default = []
 
 [build-dependencies]
-prost-build = {version = "0.5.0", optional = true}
+prost-build = { version = "0.5.0", optional = true }
